@@ -4,6 +4,7 @@ Revision history for Dancer
  [API CHANGES]
 
  [BUG FIXES]
+ - Don't get tripped by YAML::XS's readonly values. (GH#1070)
 
  [DOCUMENTATION]
 
